# helpme-py

./: .buildinfo  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  bibliography.html  genindex.html  gettingstarted.html  index.html  introduction.html  objects.inv  py_api.html  pyproject.toml  search.html  searchindex.js
.doctrees/: bibliography.doctree  gettingstarted.doctree  index.doctree  introduction.doctree  py_api.doctree
.doctrees/_autosummary/: helpme_py.LatticeType.doctree  helpme_py.MatrixD.doctree  helpme_py.MatrixF.doctree  helpme_py.PMEInstanceD.doctree  helpme_py.PMEInstanceF.doctree  helpme_py.PairList.doctree
.doctrees/_exhale/: class_structhelpme_1_1gammaComputer.doctree  class_structhelpme_1_1incompleteGammaComputer.doctree  class_structhelpme_1_1incompleteGammaVirialComputer.doctree  classhelpme_1_1BSpline.doctree  classhelpme_1_1FFTWAllocator.doctree  classhelpme_1_1FFTWWrapper.doctree  classhelpme_1_1Matrix.doctree  classhelpme_1_1PMEInstance.doctree  classsplineCacheEntry.doctree  cpp_api.doctree  define_gamma_8h_1a13deb336ed7209c93b54b8c8cd493c3e.doctree  define_gamma_8h_1a5aada0be6b5613c6f01cb54962c77f7f.doctree  define_gamma_8h_1a6ffe0d727158120ca49b38a1fed8c5d0.doctree  define_gamma_8h_1ac9bd36966441fb675ed2dcc2a4503569.doctree  define_helpme_8h_1a3457e9c167e8c5fc5e78409291a671c8.doctree  define_mpi__wrapper_8h_1a48497a4ae8b25b3b7c0f0bdad766a564.doctree  dir__home_runner_work_helpme-py_helpme-py_include.doctree  enum_helpme_8h_1a2196fee10c55373e383cf857b14412c3.doctree  enum_helpme_8h_1a4fc4f8282a7e47f5d842c715ea72b059.doctree  enum_helpme_8h_1a51cde3faab477dd22811f194283ff534.doctree  enum_helpme_8h_1ada505b6207eea52aca1b36217ab38584.doctree  file__home_runner_work_helpme-py_helpme-py_include_cartesiantransform.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_fftw_wrapper.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_fletcher.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_gamma.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_gridsize.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_helpme.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_lapack_wrapper.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_matrix.h.doctree  file__home_runner_work_helpme-py_helpme-py_include_memory.h.doctree  function_fletcher_8h_1a08b980c39ff76d028da19e0812423c9a.doctree  (+63 more)
_autosummary/: helpme_py.LatticeType.html  helpme_py.MatrixD.html  helpme_py.MatrixF.html  helpme_py.PMEInstanceD.html  helpme_py.PMEInstanceF.html  helpme_py.PairList.html
_exhale/: class_structhelpme_1_1gammaComputer.html  class_structhelpme_1_1incompleteGammaComputer.html  class_structhelpme_1_1incompleteGammaVirialComputer.html  classhelpme_1_1BSpline.html  classhelpme_1_1FFTWAllocator.html  classhelpme_1_1FFTWWrapper.html  classhelpme_1_1Matrix.html  classhelpme_1_1PMEInstance.html  classsplineCacheEntry.html  cpp_api.html  define_gamma_8h_1a13deb336ed7209c93b54b8c8cd493c3e.html  define_gamma_8h_1a5aada0be6b5613c6f01cb54962c77f7f.html  define_gamma_8h_1a6ffe0d727158120ca49b38a1fed8c5d0.html  define_gamma_8h_1ac9bd36966441fb675ed2dcc2a4503569.html  define_helpme_8h_1a3457e9c167e8c5fc5e78409291a671c8.html  define_mpi__wrapper_8h_1a48497a4ae8b25b3b7c0f0bdad766a564.html  dir__home_runner_work_helpme-py_helpme-py_include.html  enum_helpme_8h_1a2196fee10c55373e383cf857b14412c3.html  enum_helpme_8h_1a4fc4f8282a7e47f5d842c715ea72b059.html  enum_helpme_8h_1a51cde3faab477dd22811f194283ff534.html  enum_helpme_8h_1ada505b6207eea52aca1b36217ab38584.html  file__home_runner_work_helpme-py_helpme-py_include_cartesiantransform.h.html  file__home_runner_work_helpme-py_helpme-py_include_fftw_wrapper.h.html  file__home_runner_work_helpme-py_helpme-py_include_fletcher.h.html  file__home_runner_work_helpme-py_helpme-py_include_gamma.h.html  file__home_runner_work_helpme-py_helpme-py_include_gridsize.h.html  file__home_runner_work_helpme-py_helpme-py_include_helpme.h.html  file__home_runner_work_helpme-py_helpme-py_include_lapack_wrapper.h.html  file__home_runner_work_helpme-py_helpme-py_include_matrix.h.html  file__home_runner_work_helpme-py_helpme-py_include_memory.h.html  file__home_runner_work_helpme-py_helpme-py_include_mpi_wrapper.h.html  file__home_runner_work_helpme-py_helpme-py_include_powers.h.html  file__home_runner_work_helpme-py_helpme-py_include_splines.h.html  file__home_runner_work_helpme-py_helpme-py_include_string_utils.h.html  file__home_runner_work_helpme-py_helpme-py_include_tensor_utils.h.html  function_cartesiantransform_8h_1a060e019d9442546d5e5168ee0a5c146f.html  function_cartesiantransform_8h_1a256bfb8cf9356b69d856a27dccfd2e33.html  function_cartesiantransform_8h_1a347e94f6ebf33fc9794b2dc3a4ad62a5.html  function_cartesiantransform_8h_1ac82d4a439d1917bf45f99c6b3e773f1c.html  function_fletcher_8h_1a08b980c39ff76d028da19e0812423c9a.html  (+54 more)
_sources/: bibliography.rst.txt  py_api.rst.txt
cmake/: optionsTools.cmake
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
docs/sphinx/: conf.py.in  gettingstarted.rst  index.rst
docs/sphinx/_templates/: class.rst
include/: fftw_wrapper.h  gamma.h  helpme.h
src/: CMakeLists.txt  helpme.cc  pywrappers.cc
tests/: CMakeLists.txt  dhfr_findif.cpp  fullexample.cpp  fullexample.py  fullexample_parallel.cpp
tests/unittests/: CMakeLists.txt  unittest-cartesiantransform.cpp  unittest-cdq-field-findif.cpp  unittest-coulomb-rec-parallel.cpp  unittest-coulombkappasweep.cpp  unittest-d-field-kappasweep.cpp  unittest-dipolereference.cpp  unittest-dispersion-rec-parallel.cpp  unittest-dispersionkappasweep.cpp  unittest-fft.cpp  unittest-fletcher.cpp  unittest-fullrun-compressed.cpp  unittest-fullrun-isodipole-virial.cpp  unittest-fullrun-multipoles.cpp  unittest-fullrun.cpp  unittest-gammafunction.cpp  unittest-gridsize.cpp  unittest-individualshells.cpp  unittest-lattice.cpp  unittest-latticeupdates.cpp  unittest-matrix.cpp  unittest-minimumimage.cpp  unittest-potential.cpp  unittest-powers.cpp  unittest-splines.cpp  unittest-string.cpp  unittest-tensor.cpp
(+102 files in other folders)
